--- a/Kanap-main/front/html/product.html
+++ b/Kanap-main/front/html/product.html
@@ -149,11 +149,12 @@
         <div class="limitedWidthBlock">
           <p>
             © Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All
-            Rights Reserved | Powered by <3
+            Rights Reserved | Powered by 
           </p>
         </div>
       </div>
     </footer>
+    <script src="../js/functions.js"></script>
     <script src="../js/product.js"></script>
   </body>
 </html>
